# trainable-ot-dro

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: linreg_dro.py  portfolioopt_discrete.py  portfolioopt_gaussian.py  portfolioopt_gaussianmixture.py
results/: README.md
src/trainable_ot_dro/: __init__.py  bilevel_optimization.py  cli.py  cones.py  conic_problem.py  reformulations.py
src/trainable_ot_dro/utils/: __init__.py  ellipses.py  gelbrich_distance.py  generating_distributions.py  numerical_utilities.py  risk_measures.py  sampling_from_distributions.py  wasserstein_distance.py
