[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainable-ot-dro"
version = "0.1.0"
description = "Trainable optimal transport ambiguity sets for distributionally robust optimization via bilevel optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "", email = "" }]
keywords = ["optimal transport", "distributionally robust optimization", "bilevel optimization"]
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.14.1",
  "cvxpy>=1.5.3",
  "matplotlib==3.9.0",
  "clarabel>=0.9.0",
  "POT>=0.9.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "mypy>=1.0", "pre-commit>=3.0"]

[project.urls]
Homepage = "https://github.com/JonasOhn/trainable-ot-dro"
Repository = "https://github.com/JonasOhn/trainable-ot-dro"

[project.scripts]
ot-dro-demo = "trainable_ot_dro.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["trainable_ot_dro*"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
